Fix long URL wrapping issue #5

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -6,6 +6,10 @@ body {
     display: none;
 }
 
+.results-box .list-group-item {
+    overflow-wrap: break-word;
+}
+
 input#derefUrl {
     margin-bottom: 16px;
 }
